Bug 264135 - REGRESSION (267754@main): Unable to play embedded web videos in iWork apps
Summary: REGRESSION (267754@main): Unable to play embedded web videos in iWork apps
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Page Loading (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andy Estes
URL:
Keywords: InRadar
Depends on: 259946
Blocks:
  Show dependency treegraph
 
Reported: 2023-11-02 22:09 PDT by Andy Estes
Modified: 2023-11-03 13:21 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andy Estes 2023-11-02 22:09:43 PDT
REGRESSION (267754@main): Unable to play embedded web videos in iWork apps
Comment 1 Andy Estes 2023-11-02 22:09:52 PDT
<rdar://problem/116493190>
Comment 2 Andy Estes 2023-11-02 22:16:16 PDT
Pull request: https://github.com/WebKit/WebKit/pull/19932
Comment 3 EWS 2023-11-03 13:21:21 PDT
Committed 270196@main (86dd02d51f92): <https://commits.webkit.org/270196@main>

Reviewed commits have been landed. Closing PR #19932 and removing active labels.