REGRESSION (267754@main): Unable to play embedded web videos in iWork apps https://bugs.webkit.org/show_bug.cgi?id=264135 rdar://116493190

Reviewed by Chris Dumez.

In 267754@main we changed DocumentLoader to cancel loads to about: URLs that are not well-known, but
iWork apps load embedded web videos using URLs of the form "about:blank/<uuid>". To maintain binary
compatibility, added a quirk to allow loading any about: URL in apps linked before iOS 17.2 and
macOS 14.2 SDKs.

* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.cpp:
(WTF::computeSDKAlignedBehaviors):
* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h:
* Source/WTF/wtf/spi/darwin/dyldSPI.h:
* Source/WebCore/loader/DocumentLoader.cpp:
(WebCore::shouldCancelLoadingAboutURL):
(WebCore::DocumentLoader::startLoadingMainResource):

Canonical link: https://commits.webkit.org/270196@main